--- a/tests/playpen/scripts/playpen.vcproj
+++ b/tests/playpen/scripts/playpen.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="vektrix_cURLPlugin"
-	ProjectGUID="{7A821A40-666B-4873-94C5-A0764459CCBA}"
-	RootNamespace="vektrix_cURLPlugin"
+	Name="playpen"
+	ProjectGUID="{72EC62F4-4299-4080-A0F7-B68599C14897}"
+	RootNamespace="playpen"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -20,7 +20,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)\bin"
 			IntermediateDirectory="$(SolutionDir)\bin\obj\$(ConfigurationName)\$(ProjectName)"
-			ConfigurationType="2"
+			ConfigurationType="1"
 			CharacterSet="2"
 			>
 			<Tool
@@ -41,14 +41,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include\;..\..\..\dependencies\include\curl"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_CURLPLUGIN_EXPORTS"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\cURLPlugin\include;..\..\..\plugins\D3D9Plugin\include;..\..\..\plugins\FreeImgPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;..\..\..\dependencies\include;..\..\..\dependencies\include\OGRE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				WarnAsError="true"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -62,12 +61,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libcurld.lib wldap32.lib ws2_32.lib"
-				OutputFile="$(OutDir)\$(ProjectName)_d.dll"
+				OutputFile="$(OutDir)\$(ProjectName)_d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\..\dependencies\lib\debug"
 				GenerateDebugInformation="true"
-				SubSystem="2"
+				SubSystem="1"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -96,7 +94,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)\bin"
 			IntermediateDirectory="$(SolutionDir)\bin\obj\$(ConfigurationName)\$(ProjectName)"
-			ConfigurationType="2"
+			ConfigurationType="1"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
@@ -117,16 +115,14 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include\;..\..\..\dependencies\include\curl"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VEKTRIX_CURLPLUGIN_EXPORTS"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\cURLPlugin\include;..\..\..\plugins\D3D9Plugin\include;..\..\..\plugins\FreeImgPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;..\..\..\dependencies\include;..\..\..\dependencies\include\OGRE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				WarnAsError="true"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -140,11 +136,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libcurl.lib wldap32.lib ws2_32.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\..\dependencies\lib\release"
 				GenerateDebugInformation="true"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
@@ -175,7 +170,7 @@
 			Name="Static_Release|Win32"
 			OutputDirectory="$(SolutionDir)\bin"
 			IntermediateDirectory="$(SolutionDir)\bin\obj\$(ConfigurationName)\$(ProjectName)"
-			ConfigurationType="4"
+			ConfigurationType="1"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
@@ -196,16 +191,14 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include\;..\..\..\dependencies\include\curl"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;VTX_STATIC_LIB"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\cURLPlugin\include;..\..\..\plugins\D3D9Plugin\include;..\..\..\plugins\FreeImgPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;..\..\..\dependencies\include;..\..\..\dependencies\include\OGRE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;VTX_STATIC_LIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				WarnAsError="true"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -218,15 +211,22 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
-				AdditionalOptions="/IGNORE:4221 /IGNORE:4006"
-				AdditionalDependencies="libcurl.lib wldap32.lib ws2_32.lib"
-				OutputFile="$(OutDir)\$(ProjectName)_static.lib"
+				Name="VCLinkerTool"
+				AdditionalDependencies="OgreMain.lib OIS.lib"
+				OutputFile="$(OutDir)\$(ProjectName)_static.exe"
+				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\..\dependencies\lib\release"
-				IgnoreDefaultLibraryNames=""
+				GenerateDebugInformation="true"
+				SubSystem="1"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -238,6 +238,9 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -245,7 +248,7 @@
 			Name="Static_Debug|Win32"
 			OutputDirectory="$(SolutionDir)\bin"
 			IntermediateDirectory="$(SolutionDir)\bin\obj\$(ConfigurationName)\$(ProjectName)"
-			ConfigurationType="4"
+			ConfigurationType="1"
 			CharacterSet="2"
 			>
 			<Tool
@@ -265,16 +268,14 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include\;..\..\..\dependencies\include\curl"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;VTX_STATIC_LIB"
-				MinimalRebuild="false"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\cURLPlugin\include;..\..\..\plugins\D3D9Plugin\include;..\..\..\plugins\FreeImgPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;..\..\..\dependencies\include;..\..\..\dependencies\include\OGRE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VTX_STATIC_LIB"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				WarnAsError="true"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -287,14 +288,20 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
-				AdditionalOptions="/IGNORE:4221 /IGNORE:4006"
-				AdditionalDependencies="libcurld.lib wldap32.lib ws2_32.lib"
-				OutputFile="$(OutDir)\$(ProjectName)_static_d.lib"
+				Name="VCLinkerTool"
+				AdditionalDependencies="OgreMain_d.lib OIS_d.lib"
+				OutputFile="$(OutDir)\$(ProjectName)_static_d.exe"
+				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\..\dependencies\lib\debug"
+				GenerateDebugInformation="true"
+				SubSystem="1"
+				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -306,6 +313,9 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -313,42 +323,10 @@
 	<References>
 	</References>
 	<Files>
-		<Filter
-			Name="Plugin"
+		<File
+			RelativePath="..\src\playpen_main.cpp"
 			>
-			<File
-				RelativePath="..\include\vtxcurl.h"
-				>
-			</File>
-			<File
-				RelativePath="..\src\vtxcurlPlugin.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\include\vtxcurlPlugin.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Web Access"
-			>
-			<File
-				RelativePath="..\src\vtxcurlWebFileContainer.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\include\vtxcurlWebFileContainer.h"
-				>
-			</File>
-			<File
-				RelativePath="..\src\vtxcurlWebRequest.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\include\vtxcurlWebRequest.h"
-				>
-			</File>
-		</Filter>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
