--- a/trunk/plugins/FreeImgPlugin/scripts/vektrix_FreeImgPlugin.vcproj
+++ b/trunk/plugins/FreeImgPlugin/scripts/vektrix_FreeImgPlugin.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="vektrix_FreeImgPlugin"
 	ProjectGUID="{5EA1E883-CF0C-4AF2-9D9D-213429A71861}"
 	RootNamespace="vektrix_FImgPlugin"
@@ -40,11 +40,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_FREEIMGPLUGIN_EXPORTS"
-				MinimalRebuild="false"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
