--- a/trunk/plugins/OgrePlugin/scripts/vektrix_OgrePlugin.vcproj
+++ b/trunk/plugins/OgrePlugin/scripts/vektrix_OgrePlugin.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="vektrix_OgrePlugin"
 	ProjectGUID="{6D274FC6-C549-4224-AE60-1677AEE8824C}"
 	RootNamespace="vektrix_OgrePlugin"
@@ -40,11 +40,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include;..\..\..\dependencies\include\OGRE"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_OGREPLUGIN_EXPORTS"
-				MinimalRebuild="false"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
