--- a/trunk/plugins/XmlPlugin/scripts/vektrix_XmlPlugin.vcproj
+++ b/trunk/plugins/XmlPlugin/scripts/vektrix_XmlPlugin.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="vektrix_XmlPlugin"
 	ProjectGUID="{946566C2-6253-48F5-A62E-3C5D4985F31B}"
 	RootNamespace="vektrix_XmlPlugin"
@@ -40,11 +40,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\dependencies\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_XMLPLUGIN_EXPORTS"
-				MinimalRebuild="false"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
