<<Build System>> *) added some build options to the cmake scripts
<<Core>>
*) refactored CreateObjectEvent to use a Resource directly to create a corresponding DisplayObject
*) simplified the constructor of FrameEvent and all deriving classes
*) added "createResource" template function to vtx::File to allocate resources and add them to a File in a single step
*) added addFile/removeFile functions to vtx::FileManager to add custom File instances
*) added vtx::EventDispatcher, vtx::CppScriptEngine and vtx::CppScriptResource classes
*) added extended mouse state handling to vtx::InteractiveObject in order to dispatch MouseEvent::CLICK events in future
*) fixed VTX_LOG, VTX_WARN, VTX_EXCEPT
*) added a "for_each" macro to be used with the STL containers
*) changed ShapeResource to also derive from DisplayObjectResource (like MovieClipResource)
*) added "getKeyframe" function to vtx::Timeline
*) added safety check to vtx::File destructor to avoid deleting the main MovieClipResource twice
*) fixed a potential crash at FileManager::getFile
*) moved creation of the ScriptEngine instance of a Movie in front of the main MovieClip instantiation

<<AS3Plugin>>
*) updated the build.py script to the latest caspin changes
*) added some missing "avmplus::" namespace prefixes
*) updated some code pieces of the Dictionary class to the latest caspin changes
*) added missing "ctor()" function to the DisplayObject class
*) marked the "getRootScriptObject" function of the AS3ScriptEngine as deprecated (will probably be removed from the core as well)


<<SwfPlugin>>
*) moved all reading-functionality from the SwfParser class to a separate DataReader class (for easier code maintenance and readability)
*) updated the instantiation of FrameEvents to fit the above core changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,33 +12,61 @@ set (CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "limited configs" FO
 set (folders4cmake_path ${CMAKE_SOURCE_DIR}/cmake/tools/folders4cmake.jar)
 include (folders4cmake)
 
+# global build options
+option (BUILD_AS3_PLUGIN "Include/exclude the AS3 plugin from the build" ON)
+option (BUILD_EDITOR_PLUGIN "Include/exclude the vektrix Editor plugin from the build" ON)
+option (BUILD_SWF_PLUGIN "Include/exclude the SWF plugin from the build" ON)
+option (BUILD_FLASH_PREVIEW "Include/exclude the Flash IDE Plugin from the build" OFF)
+
 # dependency discovery
 # core
 find_package (boost)
 find_package (expat REQUIRED)
+
 # plugins
+# AS3 Plugin
+if(BUILD_AS3_PLUGIN)
+	find_package (caspin REQUIRED)
+	add_subdirectory (plugins/AS3Plugin/scripts)
+endif(BUILD_AS3_PLUGIN)
+
+# Cairo Plugin
 find_package (cairo REQUIRED)
-find_package (caspin REQUIRED)
+add_subdirectory (plugins/CairoPlugin/scripts)
+
+# cURL Plugin
 find_package (curl REQUIRED)
+add_subdirectory (plugins/cURLPlugin/scripts)
+
+# FreeImage Plugin
 find_package (freeimage REQUIRED)
+add_subdirectory (plugins/FreeImgPlugin/scripts)
+
+# Ogre3D Plugin
 find_package (ogre REQUIRED)
-find_package (ois REQUIRED)
-find_package (zlib REQUIRED)
+add_subdirectory (plugins/OgrePlugin/scripts)
+
+# SWF Plugin
+if(BUILD_SWF_PLUGIN)
+	find_package (zlib REQUIRED)
+	add_subdirectory (plugins/SwfPlugin/scripts)
+endif(BUILD_SWF_PLUGIN)
 
 # core library
 add_subdirectory (core/scripts)
 
-# plugins
-add_subdirectory (plugins/AS3Plugin/scripts)
-add_subdirectory (plugins/CairoPlugin/scripts)
-add_subdirectory (plugins/cURLPlugin/scripts)
-add_subdirectory (plugins/FreeImgPlugin/scripts)
-add_subdirectory (plugins/OgrePlugin/scripts)
-add_subdirectory (plugins/SwfPlugin/scripts)
+# vektrix Editor Plugin
+if(BUILD_EDITOR_PLUGIN)
+	add_subdirectory (plugins/EditorPlugin/scripts)
+endif(BUILD_EDITOR_PLUGIN)
+
 #add_subdirectory (plugins/XmlPlugin/scripts)
 
 # demos
+find_package (ois REQUIRED)
 add_subdirectory (demos/Ogre3D/scripts)
 
 # tools
-add_subdirectory (tools/vtxFlashPreview/scripts)
+if(BUILD_FLASH_PREVIEW)
+	add_subdirectory (tools/vtxFlashPreview/scripts)
+endif(BUILD_FLASH_PREVIEW)
