[AUTHOR:stonecold_] <<Core>> *) refactored and fixed Texture creation parameters (width/height instead of a single size) for AtlasTextures *) refactored Singleton template, now there are two kinds of Singletons (with and without automatic construction) *) changed LogManager to use the new auto-constructing Singleton template *) fixed VTX_LOG/WARN/EXCEPT *) changed pure virtual function from ScriptCallbackListener to a simple virtual function
<<OgrePlugin>>
*) updated the OgreTexture implementation to reflect the changes to the core

<<SwfPlugin>>
*) renamed COLOR type to RGBA (to match the corresponding type at the SWF file specification)

<<General>>
*) removed unnecessary "tests" directory
*) added some coding style guidelines

<<UnitTesting>>
*) added first draft of the unit testing system
*) added as3::flash_external_ExternalInterface test including test XFL project
*) added empty as3::flash_display_DisplayObject and swf::ImageParsing test prototypes



[AUTHOR:objectoriented]
<<Core>>
*) re-added name parameter to ScriptResources
*) added debug assert to CreateObjectEvent constructor

<<SwfPlugin>>
*) added accessor for the read data pointer at the DataReader class
*) added first draft of the image parsing implementation
*) added some sanity checks to SwfParser to check if an error occurred while parsing a SWF tag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ include (folders4cmake)
 option (BUILD_AS3_PLUGIN "Include/exclude the AS3 plugin from the build" ON)
 option (BUILD_EDITOR_PLUGIN "Include/exclude the vektrix Editor plugin from the build" ON)
 option (BUILD_SWF_PLUGIN "Include/exclude the SWF plugin from the build" ON)
-option (BUILD_FLASH_PREVIEW "Include/exclude the Flash IDE Plugin from the build" OFF)
+option (BUILD_FLASH_PREVIEW "Include/exclude the Flash IDE Plugin from the build" ON)
+option (BUILD_UNIT_TESTS "Include/exclude the unit test components from the build" OFF)
 
 # dependency discovery
 # core
@@ -61,9 +62,14 @@ if(BUILD_EDITOR_PLUGIN)
 endif(BUILD_EDITOR_PLUGIN)
 
 #add_subdirectory (plugins/XmlPlugin/scripts)
+#--------------------------------------------
+find_package (ois REQUIRED)
+
+if(BUILD_UNIT_TESTS)
+	add_subdirectory (dev/unit_tests/scripts)
+endif(BUILD_UNIT_TESTS)
 
 # demos
-find_package (ois REQUIRED)
 add_subdirectory (demos/Ogre3D/scripts)
 
 # tools
